--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- ================================== Header ====================================== -->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Lucas</a>
+            <a href="#" class="nav__logo"><img class="nav__logo-img" src="./imgs/icons/Logologo.svg" alt=""></a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
